# samples-cmake

./: CMakeLists.txt  README.md
include/: good_morning.h  hello.h
src/: CMakeLists.txt  good_morning.cpp  hello.cpp
tests/: CMakeLists.txt  main.cpp  test_main.cpp
